# 3d-SWAP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  package.xml
demo/launch/: test_hal_gazebo.launch
gcs/: CMakeLists.txt
gcs/src/: gcs.cpp  main.cpp
gcs/ui/: gcs.ui
gcs_state_machine/: CMakeLists.txt  old_package.xml  package.xml
gcs_state_machine/include/: DeployArea.h  gcs_state_machine.h
gcs_state_machine/msg/: GcsState.msg  gcs_state.msg
gcs_state_machine/src/: DeployArea.cpp  deploy_area_handle.cpp  gcs_state_machine.cpp  main.cpp
gcs_state_machine/srv/: ApproachPoint.srv  DeployArea.srv
mbzirc_scheduler/: CMakeLists.txt  package.xml
mbzirc_scheduler/launch/: scheduler.launch
mbzirc_scheduler/src/: scheduler_node.cpp  task_allocator.cpp
mbzirc_scheduler/srv/: AssignTarget.srv  SetTargetStatus.srv
mbzirc_visualization/: CMakeLists.txt  package.xml
mbzirc_visualization/src/: visualizer_node.cpp
mbzirc_visualization/world/: arena.world  arena_3.world
qt_gcs/: CMakeLists.txt  package.xml
qt_gcs/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
qt_gcs/python/: logParser.py
qt_gcs/src/: LedIndicator.cpp  LogManager.cpp  UavMark.cpp  gcs.cpp  main.cpp  uavInterface.cpp  uavLayerPaint.cpp
quick_mission/: CMakeLists.txt  package.xml
quick_mission/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
quick_mission/launch/: xmlTool.launch
quick_mission/samples/: multi_uav.xml  single_uav.xml
quick_mission/src/: main.cpp  tinyxml2.cpp
simulator_gazebo/: CMakeLists.txt  package.xml
simulator_gazebo/launch/: example_random.launch  firefly_with_waypoints_publisher (copia).launch  firefly_with_waypoints_publisher.launch  moverObjetosprueba.launch  prueba_1.launch  prueba_2 (copia).launch  prueba_2.launch  random_prueba.launch  simulation1.launch  simulation1.launch.autosave  simulation_demo.launch  spawn_mav.launch  spawn_object.launch
simulator_gazebo/model/: Circuito.stl  Circuito_en8.stl  Circuito_en8_2.stl  Circuito_en8_3.stl  Dji.fcstd  DropZone.blend  DropZone.blend1  DropZone.dae  DropZone.stl  DropZone_01.dae  RectanguloPocaProt.stl  Stage_01.blend  Stage_01.dae  Stage_07_realscale.blend  Stage_07_realscale.dae  Stage_07_realscale_1.dae  Stage_07_scale.blend  Stage_07_scale.blend1  Stage_07_scale.dae
simulator_gazebo/src/: cambiar posiciones.cpp  cameraview.cpp  createfileworld.cpp  hovering.cpp  main.cpp  moveobject.cpp  pruebamover (copia).cpp  pruebamover (otra copia).cpp  pruebamover.cpp  random_vector generator.cpp  simple_gripper.cpp  spawnmodel.cpp  trajectory.cpp  waypoint_publisher.cpp  wp_follower.cpp
simulator_gazebo/urdf/: grvc_quadrotor.urdf.xacro  grvc_quadrotor_base.urdf.xacro  object_blue_cylinder.sdf  object_blue_cylinder.urdf  object_blue_cylinder.urdf.xacro  object_blue_cylinder.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_sensors.urdf.xacro  quadrotor_simple_controller.urdf.xacro
simulator_gazebo/world/: generate_world.world
uav_avoidance/: CMakeLists.txt  package.xml  todo.txt
uav_avoidance/bags/: Bag.bag
uav_avoidance/config/: pid.cfg
uav_avoidance/launch/: avoidance.launch  avoidance_robot1.launch  avoidance_robot2.launch  avoidance_robot3.launch  avoidance_simulations.launch  avoidance_visualization.launch  state_machine_fake.launch  visualization.launch  wakeup_all_uav.launch  wakeup_uav.launch
uav_avoidance/logs/: goals.txt  goals1.txt  goals2.txt  goals3.txt  mission5_uav1.txt  mission5_uav2.txt  mission5_uav3.txt
uav_avoidance/msg/: Announcement.msg
uav_avoidance/python_node/: 1.json  navigation_node.py
uav_avoidance/scripts/: delayed.sh  ready2go.sh  test_all_logs.m
uav_avoidance/src/: 3d_swap.cpp  measures.cpp  state_machine_test.cpp  swap_2_5d.cpp  swap_2_5d.h
uav_state_machine/: CMakeLists.txt  old_package.xml  package.xml
uav_state_machine/catkin_generated/: uav_state_machine-msg-extras.cmake.develspace.in  uav_state_machine-msg-extras.cmake.installspace.in
uav_state_machine/cmake/: uav_state_machine-genmsg-context.py  uav_state_machine-genmsg.cmake
uav_state_machine/include/: state_machine.h
uav_state_machine/launch/: test_sitl_simulation.launch
uav_state_machine/msg/: Candidate.msg  CandidateList.msg  UavState.msg  candidate.msg  candidate_list.msg  uav_state.msg
uav_state_machine/src/: Candidate.cpp  catching_device.cpp  main.cpp  serial_catching_device.cpp  state_machine.cpp  test_serial_catching_device.cpp  uav_state_machine.cpp
uav_state_machine/srv/: Magnetize.srv  SetTarget.srv  SwitchVision.srv  TakeOff.srv  TrackPath.srv  target_service.srv  waypoint_service.srv
uav_visual_servoing/: CMakeLists.txt  package.xml
uav_visual_servoing/include/: Candidate.h  CandidateList.h  gcsLink.h
uav_visual_servoing/src/: Candidate.cpp  gcsLink.cpp  main.cpp
uav_visual_servoing/srv/: target_service.srv
visualization/: CMakeLists.txt  package.xml
visualization/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
visualization/launch/: example_actor_tag.launch  generate_world.launch  rviz_mbzirc.launch  simulation.launch  spawn_dropping_box.launch  spawn_moving_obj.launch  spawn_object.launch  spawn_object_black_box.launch  spawn_object_black_cylinder.launch  spawn_object_blue_box.launch  spawn_object_blue_cylinder.launch  spawn_object_fixed.launch  spawn_object_mobile.launch  spawn_object_red_box.launch  spawn_object_red_cylinder.launch  spawn_quad.launch  spawn_quad_correct.launch  spawn_quad_gazebo.launch  spawn_quad_prueba (copia).launch  spawn_quad_prueba.launch  spawn_single_quad.launch
visualization/model/: drop_box.blend  drop_box.dae  drop_box_scale.blend  drop_box_scale.blend1  drop_box_scale.dae  propeller_scale.blend  propeller_scale.blend1  propeller_scale.dae  stage_01.blend  stage_01.blend1  stage_01.dae  stage_01_gazebo.dae  stage_02_gazebo.dae  stage_03_gazebo.dae  stage_04_gazebo.dae
visualization/resource/: waypoints_object_black_box_mo_1.txt
(+524 files in other folders)
