<package>
	<name>mbzirc_demo</name>
	<version>1.0.0</version>
	<description>
		Sample illustrating simple use of grvc_quadrotor_hal through unified communication system grvc_com
	</description>
	<maintainer email="todo@todo.com">GRVC University of Seville</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>grvc_quadrotor_hal</build_depend>
	<run_depend>grvc_quadrotor_hal</run_depend>
</package>
