<?xml version="1.0"?>
<package>
  <name>mbzirc_qt_gcs</name>
  <version>0.0.0</version>
  <description>Basic GCS GUI</description>
  <maintainer email="prs@us.es">prs</maintainer>
  <license>BSD</license>
  <author>prs</author>
  <url>http://ros.org/wiki/mbzirc</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>grvc_quadrotor_uav</build_depend>
  <build_depend>grvc_quadrotor_utils</build_depend>
  <build_depend>mbzirc_gcs_core</build_depend>
  <build_depend>uav_visual_servoing</build_depend>
  
  <run_depend>uav_visual_servoing</run_depend>
  <run_depend>grvc_quadrotor_uav</run_depend>
  <run_depend>grvc_quadrotor_utils</run_depend>
  <run_depend>mbzirc_gcs_core</run_depend>
</package>
