<?xml version="1.0"?>
<package>
  <name>mbzirc_quick_mission</name>
  <version>0.0.0</version>
  <description>Xml mission tool</description>
  <maintainer email="luisgrvc@todo.todo">luisgrvc</maintainer>
  <license>BSD</license>
  <author>Carmelo J</author>
  <url>http://ros.org/wiki/mbzirc</url>

  <buildtool_depend>catkin</buildtool_depend>
  

  <build_depend>tinyxml</build_depend>
  <build_depend>grvc_quadrotor_uav</build_depend>
  <build_depend>grvc_quadrotor_utils</build_depend>
  <build_depend>mbzirc_gcs_core</build_depend>

  <run_depend>tinyxml</run_depend>
  <run_depend>grvc_quadrotor_uav</run_depend>
  <run_depend>grvc_quadrotor_utils</run_depend>
  <run_depend>mbzirc_gcs_core</run_depend>
</package>
