<?xml version="1.0"?>
<package>
  <name>mbzirc_demo</name>
  <version>0.0.0</version>
  <description>The mbzirc package</description>
  <maintainer email="luisgrvc@todo.todo">luisgrvc</maintainer>
  <license>BSD</license>
  <author>Luis Manuel Ramirez</author>
  <url>http://ros.org/wiki/mbzirc</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen3</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
 

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
