<?xml version="1.0"?>
<package>
  <name>mbzirc_stage</name>
  <version>0.0.0</version>
  <description>The mbzirc package</description>
  <maintainer email="luisgrvc@todo.todo">luisgrvc</maintainer>
  <license>BSD</license>
  <author>Luis Manuel Ramirez</author>
  <url>http://ros.org/wiki/mbzirc</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>grvc_quadrotor_com</build_depend>

  <run_depend>grvc_quadrotor_com</run_depend>

 

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
