<?xml version="1.0"?>
<package>
  <name>uav_avoidance</name>
  <version>0.0.1</version>
  <description>The uav_avoidance package implements a 2 dimensional collision 
  avoidance system for the quadcopters called SWAP. On it, when two or more
  quadcopters are too close to each other, the system will command them to 
  avoid the conflict creating a virtual roundabout.
  
  The system was created only for colaborative uavs.
  </description>

  <author email="eduardo.ferrera@uni-due.de">		Eduardo Ferrera	</author>
  <maintainer email="eduardo.ferrera@uni-due.de">	Eduardo Ferrera	</maintainer>
  <url type="website">					www.nes.uni-due.de	</url> 

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>grvc_quadrotor_hal</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>armadillo</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>grvc_quadrotor_hal</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>armadillo</run_depend>
  
</package>
